tests/bad/methods.glaz
struct Suma {
  a: i32,
  b: i32
}

impl Suma {
  pub fn add(self) i32 {
    return self.a + self.b;
  }
}

fn main() {
  let x = Suma{a: 1, b: 4};
  x.sub();
}
